# AVR-CMake-Example

./: CMakeLists.txt  LICENSE  README.md  avr-toolchain.cmake
libavrc/: CMakeLists.txt  README.md
libavrc/include/core/: serial.h
libavrc/src/: serial.c
program/: CMakeLists.txt  main.c
sketch/: CMakeLists.txt
src/: main.c
